dropdown alignment fixed

--- a/views/css/signup.css
+++ b/views/css/signup.css
@@ -129,13 +129,13 @@ body {
 /*
 
 /*DROPDOWN STUFF*/
-.customdrop {
+/*.customdrop {
   background-color: #3498db !important;
   color: #fff !important;
   font-size: 16px !important;
   font-family: 'Roboto', sans-serif !important;
   /*border-style: solid !important;*/
-  border-bottom: medium solid  #3498db !important;
+/*  border-bottom: medium solid  #3498db !important;
   padding: 15px !important;
   text-align: center !important;
 
@@ -146,8 +146,8 @@ body {
   right: auto;
   text-align: center;
   transform: translate(-50%, 0);
-}
-
+}*/
+*/
 /* Dropdown Button */
 /*.dropbtn {
     background-color: #4CAF50;
